# netguard

./: .gitignore  Cargo.toml  README.md  config.json
data/models/: default.model
data/signatures/: network_threats.json
src/: lib.rs  main.rs
src/analysis/: anomaly.rs  mod.rs  protocol.rs  signature.rs
src/capture/: interface.rs  mod.rs  packet.rs
src/cli/: args.rs  mod.rs  ui.rs
src/ml/: features.rs  mod.rs  model.rs  training.rs
src/reporting/: formats.rs  mod.rs  report.rs
src/scan/: mod.rs
src/utils/: config.rs  error.rs  logger.rs  mod.rs
test_data/: loopback.pcap
